package edu.fiuba.algo3.modelo.Unidad;

interface TipoDeUnidad {
}
